# gr-webspectrum

./: .gitignore  README.rst  pyproject.toml
microservices/: gr_zmq_adapter.py  simple_sim.py
server/app/core/: config.py
server/static/: index.html  spectrum.html
