[tool.poetry]
name = "gr-webspectrum"
version = "0.1.0"
description = ""
authors = ["Jim Melton <jwmelto@users.sourceforge.net>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
fastapi = "^0.79.0"
sse-starlette = "^1.1.6"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"
redis = "^4.3.4"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
lstree = "^0.1.1"
pytest = "^7.1.2"
requests = "^2.28.1"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
